syntax = "proto3";

package ErrorsSample;

message SqrtRequest {
	int32 number = 1;
}

message SqrtResponse {
	double sqrt_root = 1;
}

service SqrtService {
	rpc Sqrt(SqrtRequest) returns (SqrtResponse) { }
}